--- a/index.html
+++ b/index.html
@@ -279,21 +279,21 @@
     <div class="tabs is-boxed is-centered main-menu" id="nav">
       <ul>
         <li data-target="pane-1" id="1" class="is-active">
-          <a href="#">
+          <a aria-labelledby="id11" role="tab" aria-controls="pane-1">
             <span class="icon is-small"><i class="fa fa-image"></i></span>
-            <span>Pictures</span>
+            <span id="id11">Pictures</span>
           </a>
         </li>
         <li data-target="pane-3" id="3">
-          <a href="#">
+          <a aria-labelledby="id12" role="tab" aria-controls="pane-3">
             <span class="icon is-small"><i class="fab fa-superpowers"></i></span>
-            <span>Team</span>
+            <span id="id12">Team</span>
           </a>
         </li>
         <li data-target="pane-4" id="4">
-          <a href="#">
+          <a aria-labelledby="id13" role="tab" aria-controls="pane-4">
             <span class="icon is-small"><i class="fa fa-film"></i></span>
-            <span>Video</span>
+            <span id="id13">Video</span>
           </a>
         </li>
       </ul>
@@ -301,7 +301,7 @@
   </div>
 
   <div class="tab-content container">
-    <div class="tab-pane is-active level" id="pane-1">
+    <div role="tabpanel" class="tab-pane is-active level" id="pane-1">
       <div class="container">
         <div class="columns features">
           <div class="column is-4">
@@ -357,7 +357,7 @@
       </div>
     </div>
 
-    <div class="tab-pane" id="pane-3">
+    <div role="tabpanel" class="tab-pane" id="pane-3">
       <div class="columns medias">
         <div class="column">
           <div class="media">
@@ -418,7 +418,7 @@
       </div>
     </div>
 
-    <div class="tab-pane" id="pane-4">
+    <div role="tabpanel" class="tab-pane" id="pane-4">
       <div class="columns is-centered">
         <div class="column is-three-quarters">
           <div class="title has-text-centered">Inspired video</div>
