added ARIA roles for modals

--- a/index.html
+++ b/index.html
@@ -1182,7 +1182,7 @@
     <button class="modal-close is-large"></button>
   </div>
 
-  <div id="modal-image1" class="modal modal-fx-3dSlit">
+  <div role="dialog" id="modal-image1" class="modal modal-fx-3dSlit">
     <div class="modal-background"></div>
     <div class="modal-content is-huge is-image">
       <img alt="" src="https://source.unsplash.com/random/?sig=1">
@@ -1190,7 +1190,7 @@
     <button class="modal-close is-large"></button>
   </div>
 
-  <div id="modal-image2" class="modal modal-fx-superScaled">
+  <div role="dialog" id="modal-image2" class="modal modal-fx-superScaled">
     <div class="modal-background"></div>
     <div class="modal-content  is-image">
       <img alt="pierced heart" src="https://source.unsplash.com/random/?sig=3">
