added aria-labelledby to sections

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
   </div>
 
   <div role="contentinfo" class="section" id="about">
-    <div class="section-heading has-text-centered">
-      <h2 class="title is-2">About Us</h2>
+    <section aria-labelledby="about-us" class="section-heading has-text-centered">
+      <h2 id="about-us" class="title is-2">About Us</h2>
       <h5 class="subtitle is-5">We of all trades, master of "some"</h5>
       <div class="container">
         <p>Web developers with more than <b>4 years</b> of well-rounded experience with a degree in the
@@ -119,7 +119,7 @@
           believes
           in gaining a competitive edge and giving back to the community.</p>
       </div>
-    </div>
+    </section>
 
     <div class="content container">
       <h1 id="hello-world" class="is-1 title">Hello World</h1>
@@ -214,10 +214,10 @@
 
   <div role="list" class="hero has-background-grey-light">
     <div class="container features">
-      <div class="section-heading has-text-centered">
-        <h2 class="title is-2">Three key features</h2>
+      <section aria-labelledby="key-features" class="section-heading has-text-centered">
+        <h2 id="key-features" class="title is-2">Three key features</h2>
         <h5 class="subtitle is-5">We don't hide what we do</h5>
-      </div>
+      </section>
 
       <div class="columns">
         <div class="column is-4">
@@ -433,10 +433,10 @@
 
   <div role="main" class="has-background-grey-lighter">
     <div class="container has-text-centered">
-        <div class="section-heading has-text-centered">
-          <h2 class="title is-2">Upcoming events</h2>
+        <section aria-labelledby="upcoming-events" class="section-heading has-text-centered">
+          <h2 id="upcoming-events" class="title is-2">Upcoming events</h2>
           <div class="subtitle is-5">Outcoming dates for the best options</div>
-        </div>
+        </section>
 
       <div class="tile is-ancestor">
         <div class="tile is-parent">
@@ -506,9 +506,9 @@
     </div>
   </div>
 
-  <div class="section">
+  <section aria-labelledby="services" class="section">
     <div class="section-heading has-text-centered">
-      <div class="title is-2">Services</div>
+      <div id="services" class="title is-2">Services</div>
       <div class="subtitle is-5">What can I do for you?</div>
     </div>
     <div class="container">
@@ -552,12 +552,12 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
 
-  <div class="section has-background-grey-lighter">
+  <section aria-labelledby="photos" class="section has-background-grey-lighter">
     <div class="container">
       <div class="section-heading has-text-centered">
-        <div class="title is-2">Photos from past events</div>
+        <div id="photos" class="title is-2">Photos from past events</div>
       </div>
 
       <div class="container portfolio-container">
@@ -717,12 +717,12 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
 
-  <div class="section">
+  <section aria-labelledby="forum" class="section">
     <div class="container">
       <div class="section-heading has-text-centered">
-        <div class="title is-2">Forum</div>
+        <div id="forum" class="title is-2">Forum</div>
         <div class="subtitle is-5">Discuss any topic with no leaving this page</div>
       </div>
 
@@ -878,12 +878,12 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
 
-  <div class="section has-background-light">
+  <section aria-labelledby="contacts" class="section has-background-light">
     <div class="container">
       <div class="section-heading has-text-centered">
-        <div class="title is-2">Contact us</div>
+        <div id="contacts" class="title is-2">Contact us</div>
         <div class="subtitle is-5">Don't hesitate, ask anything</div>
       </div>
 
@@ -974,7 +974,7 @@
         </div>
       </form>
     </div>
-  </div>
+  </section>
 
   <!-- <div class="section">
     <div class="container">
