added aria-haspopup for buttons which open modals

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 <div class="content">
                   <div>Click on image above</div>
                   <p>Purus semper eget duis at tellus at urna condimentum mattis. Non blandit massa enim nec. Integer enim neque volutpat ac tincidunt vitae semper quis. Accumsan tortor posuere ac ut consequat semper viverra nam.</p>
-                  <span class="button is-link modal-button" data-target="modal-image1">Image modal</span>
+                  <button aria-haspopup="true" class="button is-link modal-button" data-target="modal-image1">Image modal</button>
                 </div>
               </div>
             </div>
@@ -332,7 +332,7 @@
                   <div>Tempor orci dapibus ultrices in.</div>
                   <p>Ut venenatis tellus in metus vulputate. Amet consectetur adipiscing elit pellentesque. Sed arcu non odio euismod lacinia at quis risus. Faucibus turpis in eu mi bibendum neque egestas cmonsu songue. Phasellus vestibulum lorem
                     sed risus.</p>
-                  <span class="button is-link modal-button" data-target="modal-card">Modal Card</span>
+                  <button aria-haspopup="true" class="button is-link modal-button" data-target="modal-card">Modal Card</button>
                 </div>
               </div>
             </div>
@@ -348,7 +348,7 @@
                 <div class="content">
                   <div>Click anywhere on card</div>
                   <p>Imperdiet dui accumsan sit amet nulla facilisi morbi. Fusce ut placerat orci nulla pellentesque dignissim enim. Libero id faucibus nisl tincidunt eget nullam. Commodo viverra maecenas accumsan lacus vel facilisis.</p>
-                  <span class="button is-link modal-button" data-target="modal-image2">Image modal</span>
+                  <button aria-haspopup="true" class="button is-link modal-button" data-target="modal-image2">Image modal</button>
                 </div>
               </div>
             </div>
@@ -367,7 +367,7 @@
             <div class="media-content">
               <div class="content">
                 <p>
-                  <a aria-labelledby="id1"><b>Dominic Ipsum</b></a>
+                  <a href="#" aria-labelledby="id1"><b>Dominic Ipsum</b></a>
                   <br id="id1"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
                 </p>
               </div>
@@ -380,7 +380,7 @@
             <div class="media-content">
               <div class="content">
                 <p>
-                  <a aria-labelledby="id2"><b>Cassie Ipsum</b></a>
+                  <a href="#" aria-labelledby="id2"><b>Cassie Ipsum</b></a>
                   <br id="id2"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
                 </p>
               </div>
@@ -395,7 +395,7 @@
             <div class="media-content">
               <div class="content">
                 <p>
-                  <a aria-labelledby="id3"><b>Avery Ipsum</b></a>
+                  <a href="#" aria-labelledby="id3"><b>Avery Ipsum</b></a>
                   <br id="id3"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
                 </p>
               </div>
@@ -408,7 +408,7 @@
             <div class="media-content">
               <div class="content">
                 <p>
-                  <a aria-labelledby="id4"><b>io Ipsum</b></a>
+                  <a href="#" aria-labelledby="id4"><b>io Ipsum</b></a>
                   <br id="id4"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
                 </p>
               </div>
