added aria-hidden to icons

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="navbar-end">
               <span class="navbar-item">
                 <a class="button is-white is-outlined" href="#">
-                  <span class="icon">
+                  <span aria-hidden="true" class="icon">
                     <i class="fa fa-home"></i>
                   </span>
                   <span>Home</span>
@@ -57,7 +57,7 @@
               </span>
               <span class="navbar-item">
                 <a class="button is-white is-outlined" href="#">
-                  <span class="icon">
+                  <span aria-hidden="true" class="icon">
                     <i class="fab fa-superpowers"></i>
                   </span>
                   <span>Examples</span>
@@ -65,7 +65,7 @@
               </span>
               <span class="navbar-item">
                 <a class="button is-white is-outlined" href="#">
-                  <span class="icon">
+                  <span aria-hidden="true" class="icon">
                     <i class="fa fa-book"></i>
                   </span>
                   <span>Documentation</span>
@@ -73,7 +73,7 @@
               </span>
               <span class="navbar-item">
                 <a class="button is-white is-outlined" href="#">
-                  <span class="icon">
+                  <span aria-hidden="true" class="icon">
                     <i class="fab fa-github"></i>
                   </span>
                   <span>View Source</span>
@@ -280,19 +280,19 @@
       <ul>
         <li data-target="pane-1" id="1" class="is-active">
           <a aria-labelledby="id11" role="tab" aria-controls="pane-1">
-            <span class="icon is-small"><i class="fa fa-image"></i></span>
+            <span aria-hidden="true" class="icon is-small"><i class="fa fa-image"></i></span>
             <span id="id11">Pictures</span>
           </a>
         </li>
         <li data-target="pane-3" id="3">
           <a aria-labelledby="id12" role="tab" aria-controls="pane-3">
-            <span class="icon is-small"><i class="fab fa-superpowers"></i></span>
+            <span aria-hidden="true" class="icon is-small"><i class="fab fa-superpowers"></i></span>
             <span id="id12">Team</span>
           </a>
         </li>
         <li data-target="pane-4" id="4">
           <a aria-labelledby="id13" role="tab" aria-controls="pane-4">
-            <span class="icon is-small"><i class="fa fa-film"></i></span>
+            <span aria-hidden="true" class="icon is-small"><i class="fa fa-film"></i></span>
             <span id="id13">Video</span>
           </a>
         </li>
@@ -899,10 +899,10 @@
           <label for="username" class="label">Username</label>
           <div class="control has-icons-left has-icons-right">
             <input id="username" class="input is-success" type="text">
-            <span class="icon is-small is-left">
+            <span aria-hidden="true" class="icon is-small is-left">
               <i class="fas fa-user"></i>
             </span>
-            <span class="icon is-small is-right">
+            <span aria-hidden="true" class="icon is-small is-right">
               <i class="fas fa-check"></i>
             </span>
           </div>
@@ -913,10 +913,10 @@
           <label for="email" class="label">Email</label>
           <div class="control has-icons-left has-icons-right">
             <input id="email" class="input is-danger" type="email" placeholder="Email input" value="hello@">
-            <span class="icon is-small is-left">
+            <span aria-hidden="true" class="icon is-small is-left">
               <i class="fas fa-envelope"></i>
             </span>
-            <span class="icon is-small is-right">
+            <span aria-hidden="true" class="icon is-small is-right">
               <i class="fas fa-exclamation-triangle"></i>
             </span>
           </div>
