improved ARIA in forms

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <input type="email" id="email-notification" class="input">
               </p>
               <p class="control">
-                <a class="button is-info" href="#">Notify Me</a>
+                <button class="button is-info">Notify Me</button>
               </p>
             </div>
           </form>
@@ -966,10 +966,10 @@
 
         <div class="field is-grouped">
           <div class="control">
-            <button class="button is-link">Submit</button>
+            <button type="submit" class="button is-link">Submit</button>
           </div>
           <div class="control">
-            <button class="button is-text">Cancel</button>
+            <button type="reset" class="button is-text">Cancel</button>
           </div>
         </div>
       </form>
