implemented ARIA-pattern for the tabs

--- a/index.html
+++ b/index.html
@@ -281,21 +281,21 @@
       </div>
     </div>
     <div class="tabs is-boxed is-centered main-menu" id="nav">
-      <ul>
-        <li data-target="pane-1" id="1" class="is-active">
-          <a role="tab"  aria-labelledby="id11" aria-controls="pane-1">
+      <ul role="tablist" aria-label="Entertainment">
+        <li role="presentation" id="1" class="is-active" data-target="pane-1">
+          <a role="tab" href="#pane-1" aria-controls="pane-1" aria-selected="true" aria-labelledby="id11">
             <span aria-hidden="true" class="icon is-small"><i class="fa fa-image"></i></span>
             <span id="id11">Pictures</span>
           </a>
         </li>
-        <li data-target="pane-3" id="3">
-          <a role="tab"  aria-labelledby="id12" aria-controls="pane-3">
+        <li role="presentation" id="3" data-target="pane-3">
+          <a role="tab" href="#pane-3" aria-controls="pane-3" aria-selected="false" aria-labelledby="id12">
             <span aria-hidden="true" class="icon is-small"><i class="fab fa-superpowers"></i></span>
             <span id="id12">Team</span>
           </a>
         </li>
-        <li data-target="pane-4" id="4">
-          <a role="tab" aria-labelledby="id13" aria-controls="pane-4">
+        <li role="presentation" id="4" data-target="pane-4">
+          <a role="tab" href="#pane-4" aria-controls="pane-4" aria-selected="false" aria-labelledby="id13">
             <span aria-hidden="true" class="icon is-small"><i class="fa fa-film"></i></span>
             <span id="id13">Video</span>
           </a>
@@ -305,7 +305,7 @@
   </section>
 
   <div class="tab-content container">
-    <div role="tabpanel" class="tab-pane is-active level" id="pane-1">
+    <div role="tabpanel" aria-hidden="false" tabindex="-1" aria-labelledby="image" class="tab-pane is-active level" id="pane-1">
       <div class="container">
         <div class="columns features">
           <div class="column is-4">
@@ -317,7 +317,7 @@
               </div>
               <div class="card-content">
                 <div class="content">
-                  <div>Click on image above</div>
+                  <div id="image">Click on image above</div>
                   <p>Purus semper eget duis at tellus at urna condimentum mattis. Non blandit massa enim nec. Integer enim neque volutpat ac tincidunt vitae semper quis. Accumsan tortor posuere ac ut consequat semper viverra nam.</p>
                   <button aria-haspopup="true" class="button is-link modal-button" data-target="modal-image1">Image modal</button>
                 </div>
@@ -361,7 +361,7 @@
       </div>
     </div>
 
-    <div role="tabpanel" class="tab-pane" id="pane-3">
+    <div role="tabpanel" aria-hidden="true" aria-labelledby="id1" tabindex="0" class="tab-pane" id="pane-3">
       <div class="columns medias">
         <div class="column">
           <div class="media">
@@ -371,7 +371,7 @@
             <div class="media-content">
               <div class="content">
                 <p>
-                  <a href="#" aria-labelledby="id1"><b>Dominic Ipsum</b></a>
+                  <a href="#"><b>Dominic Ipsum</b></a>
                   <br id="id1"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
                 </p>
               </div>
@@ -422,10 +422,10 @@
       </div>
     </div>
 
-    <div role="tabpanel" class="tab-pane" id="pane-4">
+    <div role="tabpanel" aria-hidden="true" tabindex="0" aria-labelledby="video" class="tab-pane" id="pane-4">
       <div class="columns is-centered">
         <div class="column is-three-quarters">
-          <div class="title has-text-centered">Inspired video</div>
+          <div id="video" class="title has-text-centered">Inspired video</div>
           <div class="embed-container image">
             <iframe src="https://player.vimeo.com/video/261794608" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
           </div>
