--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta name="viewport" http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="viewport"  content="width=device-width, initial-scale=1.0, user-scalable=1.0">
   <title>Web Accessibility 2021| Q1 BY</title>
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css'>
   <link rel='stylesheet prefetch' href='https://use.fontawesome.com/releases/v5.0.10/css/all.css'>
